apps/external-app1/overlays/qa/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: external-app1
  template:
    spec:
      containers:
      - name: external-app1
        resources:
          limits:
            memory: "192Mi"
            cpu: "400m"
          requests:
            memory: "96Mi"
            cpu: "200m"
